sema/testdata/gcc-c99-extra/reject/utf-badconcat2.c
void	*s0	= u8"a"   "b";
void	*s1	=   "a" u8"b";
void	*s2	= u8"a" u8"b";
void	*s3	= u8"a"  u"b";
void	*s4	=  u"a" u8"b";
void	*s5	= u8"a"  U"b";
void	*s6	=  U"a" u8"b";
void	*s7	= u8"a"  L"b";
void	*s8	=  L"a" u8"b";

int main () {}
